# nostrd

./: Cargo.toml  README.md
src/: error.rs  lib.rs
tests/: nostrd.rs
